vpc.tf
# Internet VPC
resource "aws_vpc" "main" {
    cidr_block = "${var.CidrBlock}"
    instance_tenancy = "default"
/*    enable_dns_support = "true"
    enable_dns_hostnames = "true"
    enable_classiclink = "false"
*/
    tags {
        Name = "main"
    }
}

# Subnets
resource "aws_subnet" "main-public-1" {
    vpc_id = "${aws_vpc.main.id}"
    cidr_block = "${var.pubSubnetCIDR}"
    map_public_ip_on_launch = "true"
    availability_zone = "ap-south-1a"

    tags {
        Name = "main-public-1"
    }
}

resource "aws_subnet" "main-private-1" {
    vpc_id = "${aws_vpc.main.id}"
    cidr_block = "${var.priSubnetCIDR}"
    map_public_ip_on_launch = "false"
    availability_zone = "ap-south-1b"

    tags {
        Name = "main-private-1"
    }
}

# Internet GW
resource "aws_internet_gateway" "main-gw" {
    vpc_id = "${aws_vpc.main.id}"

    tags {
        Name = "main"
    }
}

# route tables
resource "aws_route_table" "main-public" {
    vpc_id = "${aws_vpc.main.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.main-gw.id}"
    }

    tags {
        Name = "main-public-1"
    }
}

# route associations public
resource "aws_route_table_association" "main-public-1" {
    subnet_id = "${aws_subnet.main-public-1.id}"
    route_table_id = "${aws_route_table.main-public.id}"
}

#resource "aws_db_subnet_group" "default" {
#  name       = "main"
#  subnet_ids = ["${aws_subnet.main-private-1.id}"]

#  tags {
#    Name = "My DB subnet group"
#  }
#}
